--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -24,42 +24,81 @@ layout: layout
     <div class="hero-banner-container container">
       <div class="browser">
 <pre class="browser-body">
-<code>$ gem install middleman</code>
+<code class="browser-code">$ gem install middleman</code>
 </pre>
       </div>
     </div>
   </div>
 </header>
 
-<section role="main">
-  <div id="install">
-    <div id="search">
-      <form>
-        <input type="text" id="st-search-input" class="st-search-input" placeholder="Search the documentation" />
-      </form>
-      <div id="st-results-container"></div>
-      <script type="text/javascript">
-        var Swiftype = window.Swiftype || {};
-        (function() {
-          Swiftype.key = 'q3qjGN5LmX2oq6w1V47y';
-          Swiftype.inputElement = '#st-search-input';
-          Swiftype.resultContainingElement = '#st-results-container';
-          Swiftype.attachElement = '#st-search-input';
-          Swiftype.renderStyle = "overlay";
+<section class="introduction">
+  <div class="introduction-container container">
+    <div class="introduction-item">
+      <div class="introduction-item-graphic-wrapper">
+        <div class="introduction-browser browser">
+  <pre class="introduction-browser-body browser-body">
+<code class="browser-code">$ middleman init project</code>
+  </pre>
+        </div>
+      </div>
+      <div class="introduction-item-text-wrapper">
+        <h4 class="introduction-item-header">
+          <%= t("introduction.first.header") %>
+        </h4>
+        <p class="introduction-item-text">
+          <%= t("introduction.first.description") %>
+        </p>
+        <p class="introduction-item-text">
+          <%= link_to t("introduction.first.link_text"), "/",
+            class: "introduction-link" %>
+        </p>
+      </div>
+    </div>
 
-          var script = document.createElement('script');
-          script.type = 'text/javascript';
-          script.async = true;
-          script.src = "//swiftype.com/embed.js";
-          var entry = document.getElementsByTagName('script')[0];
-          entry.parentNode.insertBefore(script, entry);
-        }());
-      </script>
+    <div class="introduction-item">
+      <div class="introduction-item-text-wrapper">
+        <h4 class="introduction-item-header">
+          <%= t("introduction.second.header") %>
+        </h4>
+        <p class="introduction-item-text">
+          <%= t("introduction.second.description") %>
+        </p>
+        <p class="introduction-item-text">
+          <%= link_to t("introduction.second.link_text"), "/",
+            class: "introduction-link" %>
+        </p>
+      </div>
+      <div class="introduction-item-graphic-wrapper">
+        <div class="introduction-browser browser">
+          <div class="introduction-browser-body browser-body">
+            <div class="browser-text-editor-sidebar">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="introduction-item">
+      <div class="introduction-item-graphic-wrapper">
+        <div class="introduction-browser browser">
+          <div class="introduction-browser-body introduction-browser-window browser-body">
+          </div>
+        </div>
+      </div>
+      <div class="introduction-item-text-wrapper">
+        <h4 class="introduction-item-header">
+          <%= t("introduction.third.header") %>
+        </h4>
+        <p class="introduction-item-text">
+          <%= t("introduction.third.description") %>
+        </p>
+        <p class="introduction-item-text">
+          <%= link_to t("introduction.third.link_text"), "/",
+            class: "introduction-link" %>
+        </p>
+      </div>
     </div>
   </div>
-
-<section class="marketing-animation">
-  <h1>Marketing animation goes here _____ </h1>
 </section>
 
 <section class="community">
