Remove vendor prefixes so that autoprefixer can automate that
https://trello.com/c/lqPnkt7M

--- a/source/stylesheets/base/_forms.scss
+++ b/source/stylesheets/base/_forms.scss
@@ -29,8 +29,8 @@ label {
 textarea,
 #{$all-text-inputs},
 select[multiple=multiple] {
-  @include box-sizing(border-box);
-  @include transition(border-color);
+  box-sizing: border-box;
+  transition: border-color;
   background-color: white;
   border-radius: $form-border-radius;
   border: 1px solid $form-border-color;
@@ -57,7 +57,7 @@ textarea {
 }
 
 input[type="search"] {
-  @include appearance(none);
+  appearance: none;
 }
 
 input[type="checkbox"],
