--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -7,7 +7,7 @@
     <ul class="global-nav-list">
       <li class="global-nav-item">
         <%= link_to t("navigation.contribute"),
-          "#{locale_prefix}/contribute" %>
+          "#{locale_prefix}/community" %>
       </li>
       <li class="global-nav-item">
         <%= link_to t("navigation.docs"),
