--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -6,7 +6,7 @@ $prefix-for-opera:     false;
 $prefix-for-spec:      false;
 
 // Typography
-$sans-serif: "Fira Sans", $helvetica;
+$sans-serif: "Lato", $helvetica;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
