--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <%= stylesheet_link_tag "site" %>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
     <title><%= page_title %></title>
   </head>
   <body>
@@ -18,6 +19,6 @@
     <%= stylesheet_link_tag "solarized_light" %>
     <script>hljs.initHighlightingOnLoad();</script>
 
-    <%= partial 'layouts/tracking' %>
+    <%= partial "layouts/tracking" %>
   </body>
 </html>
