--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -93,6 +93,7 @@ $browser-bar-color: #E3E0E0;
 $browser-body-color: $dark-gray;
 
 // Global Nav Variables
+$global-nav-height: em(64);
 $global-nav-link-color: white;
 $global-nav-link-hover-color: rgba($global-nav-link-color, 0.75);
 
