--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <%= javascript_include_tag "highlight.pack" %>
     <%= javascript_include_tag "toc" %>
+    <%= javascript_include_tag "waypoints.min" %>
+    <%= javascript_include_tag "navigation-animation" %>
     <%= stylesheet_link_tag "solarized_light" %>
     <script>hljs.initHighlightingOnLoad();</script>
 
