--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -1,15 +1,17 @@
-<nav class="global-nav">
+<nav class="global-nav" data-js="global-nav">
   <section class="container">
     <header class="global-nav-item logo-text">
-      <%= link_to "#{ t("navigation.logo")}", "#{locale_prefix}/" %>
+      <%= link_to t("navigation.logo"), "#{locale_prefix}/" %>
     </header>
 
     <ul class="global-nav-list">
       <li class="global-nav-item">
-        <%= link_to "#{ t("navigation.contribute")}", "#{locale_prefix}/contribute" %>
+        <%= link_to t("navigation.contribute"),
+          "#{locale_prefix}/contribute" %>
       </li>
       <li class="global-nav-item">
-        <%= link_to "#{t("navigation.docs")}", "#{locale_prefix}/basics/install/", :class => "cta-link" %>
+        <%= link_to t("navigation.docs"),
+          "#{locale_prefix}/basics/install/", class: "cta-link" %>
       </li>
     </ul>
   </section>
