Resolve Safari SVG rendering
* Remove old Middleman brand assets
* Move `middleman-logo.svg` outside of `logos/`
* Modify box-shadow value of global nav style

https://trello.com/c/YdBlvKwh

--- a/source/stylesheets/modules/_introduction.scss
+++ b/source/stylesheets/modules/_introduction.scss
@@ -78,7 +78,7 @@
 }
 
 .introduction-browser-window {
-  background: image_url("logos/middleman-logo.svg"), $base-accent-color;
+  background: image_url("middleman-logo.svg"), $base-accent-color;
   background-size: em(80);
   background-repeat: no-repeat;
   background-position: 50%;
