--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,9 +4,8 @@ layout: layout
 
 <header class="hero">
   <%= partial "partials/global_nav" %>
-
   <section class="body-content-container wrap-container" data-waypoint="hero-content">
-    <%= link_to image_tag("logos/middleman-logo.svg"), "#{locale_prefix}/",
+    <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/",
       class: "headline-content-logo" %>
 
     <h2 class="hero-headline"><%= t("index.headline") %></h2>
