Resolve Safari SVG rendering
* Remove old Middleman brand assets
* Move `middleman-logo.svg` outside of `logos/`
* Modify box-shadow value of global nav style

https://trello.com/c/YdBlvKwh

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -4,9 +4,8 @@ layout: layout
 
 <header class="hero">
   <%= partial "partials/global_nav" %>
-
   <section class="hero-content container" data-js="hero-content">
-    <%= link_to image_tag("logos/middleman-logo.svg"), "#{locale_prefix}/",
+    <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/",
       class: "headline-content-logo" %>
 
     <h2 class="hero-headline"><%= t("index.headline") %></h2>
