Improve visual design of documentation navigation
* Remove `border` from documentation navigation
* Add `margin` below `global-nav` so it's modular and in `content-container`
* Add margin to hero content in lieu of margin from global nav
* Refactor with container names

https://trello.com/c/KNHdE47Q

--- a/source/localizable/_footer.html.erb
+++ b/source/localizable/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="wrap-container">
     <div class="footer-column">
       <article class="footer-site-information">
         <p>
