--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -1,5 +1,5 @@
 <nav class="global-nav" data-js="global-nav">
-  <section class="container">
+  <section class="wrap-container">
     <header class="global-nav-item logo-text">
       <%= link_to t("navigation.logo"), "#{locale_prefix}/" %>
     </header>
