--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -8,7 +8,7 @@
       <%= partial 'layouts/documentation_nav' %>
     </nav>
 
-    <main class="main" role="main">
+    <main class="main" role="main" data-waypoint="main">
       <%= yield %>
     </main>
   </div>
