--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,9 @@
     <%= javascript_include_tag "highlight.pack" %>
     <%= javascript_include_tag "toc" %>
     <%= javascript_include_tag "waypoints.min" %>
-    <%= javascript_include_tag "navigation-animation" %>
+    <%= javascript_include_tag "waypoints-sticky.min" %>
+    <%= javascript_include_tag "global-nav-animation" %>
+    <%= javascript_include_tag "docs-nav-animation" %>
     <%= stylesheet_link_tag "solarized_light" %>
     <script>hljs.initHighlightingOnLoad();</script>
 
