--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -11,11 +11,17 @@
 
 .body-content-container {
   margin-top: 4em;
+  margin-bottom: 4em;
+  position: relative;
 }
 
 .main {
   @include span-columns(8);
   @include shift(0.3);
+}
+
+.main.stuck {
+  @include shift(3.3);
 }
 
 .built-with-middleman-link {
