Improve visual design of documentation navigation
* Remove `border` from documentation navigation
* Add `margin` below `global-nav` so it's modular and in `content-container`
* Add margin to hero content in lieu of margin from global nav

https://trello.com/c/KNHdE47Q

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -3,7 +3,7 @@
     <%= partial 'partials/global_nav' %>
   </header>
 
-  <div class="container">
+  <div class="content-container container">
     <nav id="toc">
       <%= partial 'layouts/documentation_nav' %>
     </nav>
