--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -3,7 +3,7 @@
     <%= partial 'partials/global_nav' %>
   </header>
 
-  <div class="content-container container">
+  <div class="body-content-container wrap-container">
     <nav id="toc">
       <%= partial 'layouts/documentation_nav' %>
     </nav>
