Refactor JS syntax and var

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -4,7 +4,7 @@
   </header>
 
   <div class="body-content-container wrap-container">
-    <nav id="toc">
+    <nav id="toc" data-waypoint="toc">
       <%= partial 'layouts/documentation_nav' %>
     </nav>
 
