--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -18,10 +18,10 @@
 .main {
   @include span-columns(8);
   @include shift(0.3);
-}
 
-.main.stuck {
-  @include shift(3.3);
+  &.stuck {
+    @include shift(3.3);
+  }
 }
 
 .built-with-middleman-link {
