--- a/source/stylesheets/modules/_documentation-nav.scss
+++ b/source/stylesheets/modules/_documentation-nav.scss
@@ -3,16 +3,16 @@
   padding-top: .75em;
   padding-bottom: .75em;
   overflow: hidden;
+
+  &.stuck {
+    position: fixed;
+    top: 0;
+  }
 }
 
 .sticky-wrapper {
   @include span-columns(3 of 12);
   height: 100%;
-}
-
-#toc.stuck {
-  position: fixed;
-  top: 0;
 }
 
 .toc-block-container {
