--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -23,11 +23,7 @@ layout: layout
 </header>
 
 <section class="introduction">
-<<<<<<< HEAD
-  <div class="introduction-container wrap-container" data-js="introduction-container">
-=======
-  <div class="introduction-container container" data-waypoint="introduction-container">
->>>>>>> eb12f89... Make sticky docs navigation
+  <div class="introduction-container wrap-container" data-waypoint="introduction-container">
     <div class="introduction-item">
       <div class="introduction-item-graphic-wrapper">
         <div class="introduction-browser browser">
