Minor performance prefs

--- a/source/localizable/_footer.html.erb
+++ b/source/localizable/_footer.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="footer-column footer-right">
       <p class="footer-credit">Site proudly designed by</p>
-      <%= image_tag "thoughtbot-logo.svg", class: "footer-thoughtbot-logo" %>
+      <span class="footer-thoughtbot-logo"></span>
     </div>
   </div>
 </footer>
