--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -91,5 +91,9 @@
 }
 
 .footer-thoughtbot-logo {
-  @include size(em(200) auto);
+  @include size(em(200) em(71));
+  display: inline-block;
+  background-image: inline-image('thoughtbot-logo.svg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
