--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,24 +5,13 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <%= stylesheet_link_tag "site" %>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
     <title><%= page_title %></title>
   </head>
   <body>
     <%= yield %>
     <%= partial "localizable/footer" %>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <%= javascript_include_tag "highlight.pack" %>
-    <%= javascript_include_tag "toc" %>
-    <%= javascript_include_tag "waypoints.min" %>
-    <%= javascript_include_tag "waypoints-sticky.min" %>
-    <%= javascript_include_tag "global-nav-animation" %>
-    <%= javascript_include_tag "docs-nav-animation" %>
-    <%= stylesheet_link_tag "solarized_light" %>
-    <script>hljs.initHighlightingOnLoad();</script>
-
+    <%= javascript_include_tag :site %>
     <%= partial "layouts/tracking" %>
   </body>
 </html>
